# LETI-Data-Types

./: CMakeLists.txt  LICENSE  README.md
LETI-Data-Types/: CMakeLists.txt
LETI-Data-Types/include/LETI-Data-Types/: data_types_helper.hpp
LETI-Data-Types/src/: data_types_helper.cpp  main.cpp
